# cpm-gl-batch-testing

./: CMakeLists.txt
tests/: CMakeLists.txt
